fix report list view on small devices

--- a/src/app/pages/reports/reports.component.scss
+++ b/src/app/pages/reports/reports.component.scss
@@ -146,8 +146,10 @@
 }
 
 .card-body-custom {
-  flex: 1;
   display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
   flex-direction: column;
   justify-content: space-between;
 }
